--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        
+        <h1>Documentation - Group G</h1>
+        <h2>Group Members</h2>
+        <ul>
+            <li>Michael</li>
+            <li>Michael</li>
+            <li>Michael</li>
+            <li>Michael</li>
+            <li>Michael</li>
+
+        </ul>
+
+        <h2>Project Description</h2>
+        <p>Our project aims to make a website to aid users who are suffering from injuries or specific alimetns to find the specific hospital for their needs.</p>
+
+        <h3>Week 8</h3>
+
+        <h3>Week 9</h3>
+
+        <h3>Week 10</h3>
+
+        <h3>Week 11</h3>
+
+        <h3>Week 12</h3>
+
+        <h3>Week 13</h3>
+
+        <h3>Week 14</h3>
+
+        <h3>Week 15</h3>
+
+        
+        <script src="" async defer></script>
+    </body>
+</html>
