--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h1>Documentation - Group G</h1>
         <h2>Group Members</h2>
         <ul>
-            <li>Michael</li>
-            <li>Michael</li>
-            <li>Michael</li>
-            <li>Michael</li>
-            <li>Michael</li>
+            <li>Muting (Allen)</li>
+            <li>Bili</li>
+            <li>Daiki</li>
+            <li>Ruolin</li>
+            <li>Zhenyu</li>
 
         </ul>
 
@@ -26,6 +26,8 @@
         <p>Our project aims to make a website to aid users who are suffering from injuries or specific alimetns to find the specific hospital for their needs.</p>
 
         <h3>Week 8</h3>
+        <b> The team decided on a topic to work on: </b>
+        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels, temperature, and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
 
         <h3>Week 9</h3>
 
