--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <h1>Documentation - Group G</h1>
         <h2>Group Members</h2>
         <ul>
-            <li>Muting (Allen)</li>
-            <li>Bili</li>
-            <li>Daiki</li>
-            <li>Ruolin</li>
-            <li>Zhenyu</li>
+            <li>Li Muting (Allen)</li>
+            <li>Daiki Ito</li>
+            <li>Miao Ruolin</li>
+            <li>Biligsaikhan - Senior Coder</li>
+            <li>Khoo Zhenyu - Junior Coder</li>
 
         </ul>
 
         <h2>Project Description</h2>
-        <p>Our project aims to make a website to aid users who are suffering from injuries or specific alimetns to find the specific hospital for their needs.</p>
+        <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
 
         <h3>Week 8</h3>
         <b> The team decided on a topic to work on: </b>
