--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Documentation - Group G</h1>
         <h2>Group Members</h2>
         <ul>
-            <li>Li Muting (Allen)</li>
-            <li>Daiki Ito</li>
-            <li>Miao Ruolin</li>
+            <li>Li Muting (Allen) - Project Manager</li>
+            <li>Daiki Ito - Communications Officer</li>
+            <li>Miao Ruolin - Literature Reviewer</li>
             <li>Biligsaikhan - Senior Coder</li>
             <li>Khoo Zhenyu - Junior Coder</li>
 
@@ -26,8 +26,8 @@
         <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
 
         <h3>Week 8</h3>
-        <b> The team decided on a topic to work on: </b>
-        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels, temperature, and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+        <p> The team decided on a topic to work on: </p>
+        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
 
         <h3>Week 9</h3>
 
