--- a/index.html
+++ b/index.html
@@ -1,49 +1,72 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        
-        <h1>Documentation - Group G</h1>
-        <h2>Group Members</h2>
+<!-- Boilerplate -->
+  <meta charset="utf-8">
+  <title>Group G</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+  <!-- JS -->
+  <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
+  <script src="js/main.js"></script>
+</head>
+<body>
+
+<!-- Sidebar Experiement -->
+
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">Literature Reviews</a>
+    <a href="http://umamififty.github.io/pbl3">PBL 3</a>
+  </div>
+  
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G</span>
+  </div>
+
+  <!-- Primary Page Layout -->
+  <div class="container">
+    <div class="row">
+      <div class="three column" style="margin-top: 25%">
+        <h4>Project Description</h4>
+        <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
+
+        <h4>Group Members</h4>
         <ul>
             <li>Li Muting (Allen) - Project Manager</li>
             <li>Daiki Ito - Communications Officer</li>
             <li>Miao Ruolin - Literature Reviewer</li>
             <li>Biligsaikhan - Senior Coder</li>
             <li>Khoo Zhenyu - Junior Coder</li>
-
         </ul>
+    </div>
+  </div>
 
-        <h2>Project Description</h2>
-        <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
-
-        <h3>Week 8</h3>
+  <div class = "row">
+    <div class="three column" style="margin-top: 25%">
+        <h4>Week 8</h4>
         <p> The team decided on a topic to work on: </p>
         <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
 
-        <h3>Week 9</h3>
+        <h4>Week 9</h4>
 
-        <h3>Week 10</h3>
+    </div>
 
-        <h3>Week 11</h3>
-
-        <h3>Week 12</h3>
-
-        <h3>Week 13</h3>
-
-        <h3>Week 14</h3>
-
-        <h3>Week 15</h3>
-
-        
-        <script src="" async defer></script>
-    </body>
+<!-- End Document -->
+</body>
 </html>
