--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Primary Page Layout -->
   <div class="container">
     <div class="row">
-      <div class="three column" style="margin-top: 25%">
+      <div class="three column" style="margin-top: 20%">
         <h4>Project Description</h4>
         <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
 
@@ -58,14 +58,20 @@
   </div>
 
   <div class = "row">
-    <div class="three column" style="margin-top: 25%">
+    <div class="three column" style="margin-top: 5%">
         <h4>Week 8</h4>
         <p> The team decided on a topic to work on: </p>
         <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
-
-        <h4>Week 9</h4>
-
     </div>
+  </div>
+
+  <div class = "row">
+    <div class="three column" style="margin-top: 5%">
+        <h4>Week 9</h4>
+        <p> The team decided on a topic to work on: </p>
+        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+    </div>
+  </div>
 
 <!-- End Document -->
 </body>
