publish for now

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Primary Page Layout -->
   <div class="container">
     <div class="row">
-      <div class="three column" style="margin-top: 20%">
+      <div class="three column" style="margin-top: 10%">
         <h4>Project Description</h4>
         <p>The application that we are creating aims to provide live and useful information about the air pollution in their location.</p>
 
@@ -54,25 +54,32 @@
             <li>Biligsaikhan - Senior Coder</li>
             <li>Khoo Zhenyu - Junior Coder</li>
         </ul>
+
+        <h4>Target Market</h4>
+        <p>Our target market is the general public, especially those who are concerned about the air pollution in their location.</p>
+
+        <h4>Product Features</h4>
+        <p></p>
     </div>
   </div>
 
-  <div class = "row">
-    <div class="three column" style="margin-top: 5%">
-        <h4>Week 8</h4>
-        <p> The team decided on a topic to work on: </p>
-        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+    <div class = "row">
+      <div class="three column" style="margin-top: 5%">
+          <h4>Week 8</h4>
+          <p> The team decided on a topic to work on: </p>
+          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+      </div>
     </div>
-  </div>
 
-  <div class = "row">
-    <div class="three column" style="margin-top: 5%">
-        <h4>Week 9</h4>
-        <p> The team decided on a topic to work on: </p>
-        <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+    <div class = "row">
+      <div class="three column" style="margin-top: 5%">
+          <h4>Week 9</h4>
+          <p> The team decided on a topic to work on: </p>
+          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+      </div>
     </div>
-  </div>
 
+  </div>
 <!-- End Document -->
 </body>
 </html>
