--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">Literature Reviews</a>
-    <a href="http://umamififty.github.io/pbl3">PBL 3</a>
+    <a href="http://umamififty.github.io/pbl3">Home</a>
+    <a href="reviews.html">Literature Reviews</a>
+    <a href="weekly.html">Weekly Reports and Updates</a>
   </div>
   
   <div id="main">
