--- a/weekly.html
+++ b/weekly.html
@@ -1,22 +1,64 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+<html lang="en">
+<head>
+
+<!-- Boilerplate -->
+  <meta charset="utf-8">
+  <title>Group G - Weekly Updates</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+  <!-- JS -->
+  <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
+  <script src="js/main.js"></script>
+</head>
+<body>
+
+<!-- Sidebar Experiement -->
+
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="http://umamififty.github.io/pbl3">Home</a>
+    <a href="reviews.html">Literature Reviews</a>
+    <a href="weekly.html">Weekly Reports and Updates</a>
+  </div>
+  
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G</span>
+  </div>
+
+  <!-- Primary Page Layout -->
+  <div class="container">
+    <div class = "row">
+      <div class="three column" style="margin-top: 5%">
+          <h4>Week 8</h4>
+          <p> The team decided on a topic to work on: </p>
+          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+      </div>
+    </div>
+
+    <div class = "row">
+      <div class="three column" style="margin-top: 5%">
+          <h4>Week 9</h4>
+          <p> The team decided on a topic to work on: </p>
+          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+      </div>
+    </div>
+
+  </div>
+<!-- End Document -->
+</body>
 </html>
