--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <a href="http://umamififty.github.io/pbl3">Home</a>
     <a href="reviews.html">Literature Reviews</a>
     <a href="weekly.html">Weekly Reports and Updates</a>
+    <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
+    <a href="requirements.html">Requirements</a>
   </div>
   
   <div id="main">
