--- a/weekly.html
+++ b/weekly.html
@@ -34,10 +34,12 @@
     <a href="http://umamififty.github.io/pbl3">Home</a>
     <a href="reviews.html">Literature Reviews</a>
     <a href="weekly.html">Weekly Reports and Updates</a>
+    <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
+    <a href="requirements.html">Requirements</a>
   </div>
   
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G - Weekly Reports and Updates</span>
   </div>
 
   <!-- Primary Page Layout -->
