--- a/reviews.html
+++ b/reviews.html
@@ -97,7 +97,9 @@
             In conclusion, when making environmental monitoring software, the
             scope of environmental pollution monitoring can be gradually
             expanded with the factory area, the transportation hub near the
-            school and the ruminant farm as the center. Reference [1] He, J.
+            school and the ruminant farm as the center. 
+          </p>
+          Reference [1] He, J.
             (2006). Pollution haven hypothesis and environmental impacts of
             foreign direct investment: The case of industrial emission of sulfur
             dioxide (SO2) in Chinese provinces. Ecological Economics, 60(1),
@@ -108,6 +110,8 @@
             Science & Technology, 41(4), 347-351. [3]Johnson, K. A., & Johnson,
             D. E. (1995). Methane emissions from cattle. Journal of Animal
             Science, 73(8), 2483-2492.
+          <p>
+
           </p>
         </div>
       </div>
@@ -148,7 +152,9 @@
             of hearing. The sound produced by a bursting cracker, exceeding
             150dB, can cause a ringing sensation called ʻtinnitus’ and can
             impair hearing permanently and about 1 percent of the population
-            suffers from noise-induced pollution. Singh, N. (no date) CITESEERX,
+            suffers from noise-induced pollution. 
+          </p>
+          Singh, N. (no date) CITESEERX,
             Noise Pollution- Sources, Effects and Control. Available at:
             https://citeseerx.ist.psu.edu/document?repid=rep1&type=pdf&doi=48e218de45
             5a00cec0f503ae5872fa73bb7ef84f (Accessed: 13 June 2023). Tan, D.N.
@@ -157,7 +163,10 @@
             in Ho Chi Minh City. Available at: https://www.e3s-
             conferences.org/articles/e3sconf/pdf/2021/10/e3sconf_icies2020_00082.pdf
             (Accessed: 13 June 2023).
+          <p>
+
           </p>
+
         </div>
       </div>
 
@@ -191,12 +200,15 @@
             As a way to solve the issue and lessen the variance in
             documentation, developers follow API documentation formats such as
             OpenAPI Specification, API Blueprint, and RAML. (254 words)
-            References: Lamothe, M., Guéhéneuc, Y. G., & Shang, W. (2021). A
+          </p>
+          References: Lamothe, M., Guéhéneuc, Y. G., & Shang, W. (2021). A
             systematic review of API evolution literature. ACM Computing Surveys
             (CSUR), 54(8), 1-36. Myers, B. A., & Stylos, J. (2016). Improving
             API usability. Communications of the ACM, 59(6), 62-69. Robillard,
             M. P., & DeLine, R. (2011). A field study of API learning obstacles.
             Empirical Software Engineering, 16, 703-732.
+          <p>
+
           </p>
         </div>
       </div>
@@ -260,7 +272,9 @@
             impact on pregnancy and the first extrauterine life cycle [14]. Some
             studies have also found an association between exposure to air
             pollution during pregnancy and low birth weight at term and delayed
-            psychomotor development in childhood [15]. Reference [1] Brown JS,
+            psychomotor development in childhood [15]. 
+          </p>
+          Reference [1] Brown JS,
             Zeman KL, Bennett WD (2002) Ultrafine particle deposition and
             clearance in the healthy and obstructed lung. Am J Respir Crit Care
             Med 166:1240–1247
@@ -323,6 +337,8 @@
             birth weight: a multi-country evaluation of effect and
             heterogeneity. Environ Health Perspect 121:267–373
             https://ehp.niehs.nih.gov/doi/10.1289/ehp.1205575
+          <p>
+
           </p>
         </div>
       </div>
@@ -356,7 +372,9 @@
             that is used, the information would nevertheless prove useful to our
             application. The data and AQI score that is generated is crucial to
             the application because it would form the backbone and basis of the
-            air quality application.   References: Shriram, P., &amp; Malladi,
+            air quality application.   
+          <p>
+            References: Shriram, P., &amp; Malladi,
             S. (2021). A study and analysis of air quality index and Related
             Health Impact on Public Health. SSRN Electronic Journal.
             https://doi.org/10.2139/ssrn.3768477 Concas, F., Mineraud, J.,
@@ -364,6 +382,7 @@
             Tarkoma, S. (2021). Low-cost outdoor air quality monitoring and
             sensor calibration. ACM Transactions on Sensor Networks, 17(2),
             1–44. https://doi.org/10.1145/3446005 p>
+          </p>
           </p>
         </div>
       </div>
