--- a/reviews.html
+++ b/reviews.html
@@ -374,7 +374,7 @@
             the application because it would form the backbone and basis of the
             air quality application.   
           <p>
-            References: Shriram, P., &amp; Malladi,
+            References: Shriram, P., & Malladi,
             S. (2021). A study and analysis of air quality index and Related
             Health Impact on Public Health. SSRN Electronic Journal.
             https://doi.org/10.2139/ssrn.3768477 Concas, F., Mineraud, J.,
