--- a/weekly.html
+++ b/weekly.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Boilerplate -->
+    <meta charset="utf-8" />
+    <title>Group G - Weekly Updates</title>
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<!-- Boilerplate -->
-  <meta charset="utf-8">
-  <title>Group G - Weekly Updates</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Mobile Specific Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- FONT -->
+    <link
+      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-  <!-- FONT -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/skeleton.css" />
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+    <!-- JS -->
+    <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
+    <script src="js/main.js"></script>
+  </head>
+  <body>
+    <!-- Sidebar Experiement -->
 
-  <!-- JS -->
-  <!-- <script src="js/jquery-1.11.3.min.js"></script> -->
-  <script src="js/main.js"></script>
-</head>
-<body>
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <a href="http://umamififty.github.io/pbl3">Home</a>
+      <a href="reviews.html">Literature Reviews</a>
+      <a href="weekly.html">Weekly Reports and Updates</a>
+      <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
+      <a href="requirements.html">Requirements</a>
+    </div>
 
-<!-- Sidebar Experiement -->
+    <div id="main">
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+        >&#9776; Group G - Weekly Reports and Updates</span
+      >
+    </div>
 
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="http://umamififty.github.io/pbl3">Home</a>
-    <a href="reviews.html">Literature Reviews</a>
-    <a href="weekly.html">Weekly Reports and Updates</a>
-    <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
-    <a href="requirements.html">Requirements</a>
-  </div>
-  
-  <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G - Weekly Reports and Updates</span>
-  </div>
-
-  <!-- Primary Page Layout -->
-  <div class="container">
-    <div class = "row">
-      <div class="three column" style="margin-top: 5%">
+    <!-- Primary Page Layout -->
+    <div class="container">
+      <div class="row">
+        <div class="three column" style="margin-top: 5%">
           <h4>Week 8</h4>
-          <p> The team decided on a topic to work on: </p>
-          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+          <p>The team decided on a topic to work on:</p>
+          <p>
+            Environmental Monitoring: Displays environmental sensor data on
+            a map, providing information on air pollution, noise levels and
+            more. Users can check current environmental conditions on the map,
+            avoid highly polluted areas, and choose healthier environments.
+          </p>
+        </div>
       </div>
-    </div>
 
-    <div class = "row">
-      <div class="three column" style="margin-top: 5%">
+      <div class="row">
+        <div class="three column" style="margin-top: 5%">
           <h4>Week 9</h4>
-          <p> The team decided on a topic to work on: </p>
-          <b>3. Environmental Monitoring: Displays environmental sensor data on a map, providing information on air pollution, noise levels and more. Users can check current environmental conditions on the map, avoid highly polluted areas, and choose healthier environments.</b>
+          <p><b>June 13 2023:</b> Regular Team Meeting</p>
+          <p>Talked to the Teaching Assistant about out project and its progress.</p>
+        
+        </div>
       </div>
     </div>
-
-  </div>
-<!-- End Document -->
-</body>
+    <!-- End Document -->
+  </body>
 </html>
