--- a/weekly.html
+++ b/weekly.html
@@ -53,8 +53,8 @@
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Week 8</h4>
-          <p>The team decided on a topic to work on:</p>
-          <p>
+          <b>June 8 2023:</b>
+          <p>The team decided on a topic to work on -
             Environmental Monitoring: Displays environmental sensor data on
             a map, providing information on air pollution, noise levels and
             more. Users can check current environmental conditions on the map,
@@ -66,9 +66,8 @@
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Week 9</h4>
-          <p><b>June 13 2023:</b> Regular Team Meeting</p>
-          <p>Talked to the Teaching Assistant about out project and its progress.</p>
-        
+          <b>June 13 2023:</b>
+          <p>Regular Team Meeting - Talked to the Teaching Assistant about out project and its progress.</p>
         </div>
       </div>
     </div>
