now im done done

--- a/weekly.html
+++ b/weekly.html
@@ -54,9 +54,13 @@
         <div class="three column" style="margin-top: 5%">
           <h4>Week 8</h4>
           <b>June 3 2023:</b>
-          <p>Topics brainstorming - The team met for the first time and decided on a topic to work on.</p>
-          <p>Initially, we landed on two ideas. First was a hospital oriented application, and the other was an environment focused application.</p>
-          <p>After discussions and a general vote by the class, we decided to work on the environment application.</p>
+          <p>
+            Topics brainstorming - The team met for the first time and decided
+            on a topic to work on. Initially, we landed on two ideas. First was
+            a hospital oriented application, and the other was an environment
+            focused application. After discussions and a general vote by the
+            class, we decided to work on the environment application.
+          </p>
         </div>
       </div>
 
@@ -64,17 +68,26 @@
         <div class="three column" style="margin-top: 5%">
           <h4>Week 9</h4>
           <b>June 8 2023:</b>
-          <p>The team decided on a topic to work on -
-            Environmental Monitoring: Displays environmental sensor data on
-            a map, providing information on air pollution, noise levels and
-            more. Users can check current environmental conditions on the map,
-            avoid highly polluted areas, and choose healthier environments.
+          <p>
+            The team decided on a topic to work on - Environmental Monitoring:
+            Displays environmental sensor data on a map, providing information
+            on air pollution, noise levels and more. Users can check current
+            environmental conditions on the map, avoid highly polluted areas,
+            and choose healthier environments.
           </p>
           <b>June 10 2023:</b>
-          <p>Online Zoom Meeting - The team decided on what literature review topics we should each cover and write about.</p>
+          <p>
+            Online Zoom Meeting - The team decided on what literature review
+            topics we should each cover and write about.
+          </p>
           <b>June 13 2023:</b>
-          <p>Regular Team Meeting - Talked to the Teaching Assistant about out project and its progress.</p>
-          <p>Completed the Requirements Enginneering Process list and survey.</p>
+          <p>
+            Regular Team Meeting - Talked to the Teaching Assistant about out
+            project and its progress.
+          </p>
+          <p>
+            Completed the Requirements Enginneering Process list and survey.
+          </p>
         </div>
       </div>
     </div>
