--- a/weekly.html
+++ b/weekly.html
@@ -83,10 +83,8 @@
           <b>June 13 2023:</b>
           <p>
             Regular Team Meeting - Talked to the Teaching Assistant about out
-            project and its progress.
-          </p>
-          <p>
-            Completed the Requirements Enginneering Process list and survey.
+            project and its progress and completed the Requirements Enginneering
+            Process list and survey.
           </p>
         </div>
       </div>
