idk if this will work

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
   
   <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Group G</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#x2601; Group G</span>
   </div>
 
   <!-- Primary Page Layout -->
