--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="reviews.html">Literature Reviews</a>
     <a href="weekly.html">Weekly Reports and Updates</a>
     <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
-    <a href="#">Requirements</a>
+    <a href="requirements.html">Requirements</a>
   </div>
   
   <div id="main">
