--- a/weekly.html
+++ b/weekly.html
@@ -44,7 +44,7 @@
 
     <div id="main">
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#9776; Group G - Weekly Reports and Updates</span
+        >&#x2601; Group G - Weekly Reports and Updates</span
       >
     </div>
 
