--- a/reviews.html
+++ b/reviews.html
@@ -210,6 +210,8 @@
           <p>
 
           </p>
+
+          <object data = literature/Ruolin_1.pdf type = "application/pdf" width = "100%" height = "1000px">
         </div>
       </div>
 
