didnt close the object

--- a/reviews.html
+++ b/reviews.html
@@ -53,35 +53,35 @@
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Ruolin - Places of bad environment and data</h4>
-          <object data = literature/Ruolin_1.pdf type = "application/pdf" width = "100%" height = "1000px">
+          <object data = literature/Ruolin_1.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
         </div>
       </div>
 
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Daiki - Noise Pollution</h4>
-          <object data = literature/Daiki_1.pdf type = "application/pdf" width = "100%" height = "1000px">
+          <object data = literature/Daiki_1.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
         </div>
       </div>
 
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Biligsaikhan - Understanding APIs</h4>
-          <object data = literature/Bilig_1.pdf type = "application/pdf" width = "100%" height = "1000px">
+          <object data = literature/Bilig_1.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
         </div>
       </div>
 
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Muting - How air pollution affects people</h4>
-          <object data = literature/Muting_1.pdf type = "application/pdf" width = "100%" height = "1000px">
+          <object data = literature/Muting_1.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
         </div>
       </div>
 
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Zhenyu - Measurement of Air Quality Index</h4>
-          <object data = literature/Zhenyu_1.pdf type = "application/pdf" width = "100%" height = "1000px">
+          <object data = literature/Zhenyu_1.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
         </div>
       </div>
     </div>
