--- a/weekly.html
+++ b/weekly.html
@@ -88,6 +88,21 @@
           </p>
         </div>
       </div>
+
+      <div class = "row">
+        <div class="three column" style="margin-top: 5%">
+          <h4>Week 10</h4>
+
+          <b>June 20 2023:</b>
+          <p>
+            Regular Team Meeting - Had a session with the TA, discussing about the progress
+            of the project. Moving on to the next phase, we decided to discuss the different
+            workloads of each team member and how we should split the work. We also discussed
+            about the different technologies we should use for the project. 
+          </p>
+        
+      </div>
+
     </div>
     <!-- End Document -->
   </body>
