--- a/reviews.html
+++ b/reviews.html
@@ -50,6 +50,35 @@
 
     <!-- Primary Page Layout -->
     <div class="container">
+
+      <div class = "row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Biligsaikhan - The effect of length with noise and air</h4>
+          <object data = literature/Bilig_2.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
+        </div>
+      </div>
+
+      <div class = "row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Muting - How does air prediction work</h4>
+          <object data = literature/Muting_2.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
+        </div>
+      </div>
+
+      <div class = "row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Zhenyu - Cross-platform Development</h4>
+          <object data = literature/Zhenyu_2.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Daiki - The effect of age with noise and air</h4>
+          <object data = literature/Daiki_2.pdf type = "application/pdf" width = "100%" height = "1000px"></object>
+        </div>
+      </div>
+
       <div class="row">
         <div class="three column" style="margin-top: 5%">
           <h4>Ruolin - Places of bad environment and data</h4>
