--- a/weekly.html
+++ b/weekly.html
@@ -50,16 +50,35 @@
 
     <!-- Primary Page Layout -->
     <div class="container">
+      <div class = "row">
+        <div class="three column" style="margin-top: 5%">
+          <h4>Week 11</h4>
+          <b>June 21 2023:</b>
+          <p>
+            The team worked on polishing up the survey to make it eligible for submission.
+            The team also started working on the diagrams for the project, and the individual members
+            started working on their own parts of the project. The website was also updated with the
+            latest literature reviews. 
+          </p>
+        </div>
+      </div>
+
+
 
       <div class = "row">
         <div class="three column" style="margin-top: 5%">
           <h4>Week 10</h4>
+          <b>June 14 2023:</b>
+          <p>
+            The team continued to work on the survey and the requirements engineering process list. 
+          </p>
           <b>June 20 2023:</b>
           <p>
             Regular Team Meeting - Had a session with the TA, discussing about the progress
             of the project. Moving on to the next phase, we decided to discuss the different
             workloads of each team member and how we should split the work. We also discussed
-            about the different technologies we should use for the project. 
+            about the different technologies we should use for the project. We also discussed
+            the design and the functional aspects of the functional prototype.
           </p>
         </div>
       </div>
@@ -83,7 +102,7 @@
           <b>June 13 2023:</b>
           <p>
             Regular Team Meeting - Talked to the Teaching Assistant about out
-            project and its progress and completed the Requirements Enginneering
+            project and its progress and completed the Requirements Engineering
             Process list and survey.
           </p>
         </div>
