--- a/weekly.html
+++ b/weekly.html
@@ -60,6 +60,10 @@
             started working on their own parts of the project. The website was also updated with the
             latest literature reviews. 
           </p>
+          <b>June 27 2023:</b>
+          <p>
+            Regular Team Meeting - 
+          </p>
         </div>
       </div>
 
