--- a/weekly.html
+++ b/weekly.html
@@ -51,6 +51,17 @@
     <!-- Primary Page Layout -->
     <div class="container">
       <div class = "row">
+        <div class = "three column" style = "margin-top: 5%">
+          <h4>Week 12</h4>
+          <b>June 28 2023:</b>
+          <p>
+            <i>insert content here</i>
+          </p>
+        </div>
+      </div>
+
+
+      <div class = "row">
         <div class="three column" style="margin-top: 5%">
           <h4>Week 11</h4>
           <b>June 21 2023:</b>
@@ -62,7 +73,11 @@
           </p>
           <b>June 27 2023:</b>
           <p>
-            Regular Team Meeting - 
+            Regular Team Meeting - The team discussed the progress of the project and our personal progress.
+            We discussed about the diagrams and how to make it more presentable. We also discussed about
+            the progress of the programming. Zhenyu will do the wireframing of the website, and Biligsaikhan will
+            look into more APIs. Daiki will continue the construction of the rubric, while Ruolin and Muting will continue
+            working on the diagrams.
           </p>
         </div>
       </div>
