--- a/diagrams.html
+++ b/diagrams.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Boilerplate -->
     <meta charset="utf-8" />
-    <title>Group G - Requirements</title>
+    <title>Group G - Diagrams</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -44,7 +44,7 @@
 
     <div id="main">
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#x2601; Group G - Requirements</span
+        >&#x2601; Group G - Diagrams</span
       >
     </div>
 
@@ -52,31 +52,7 @@
     <div class="container">
       <div class="row">
         <div class="three column" style="margin-top: 5%">
-          <h4>Group G's List of Requirements</h4>
-          <b>Functional Requirements</b>
-          <p>
-            The application will require to collect the user’s age and height to
-            determine critical air pollution levels for the user. <br>
-            The application will require user geolocation to provide the correct
-            location and the relevant air pollution information. <br>
-            The application will require the air pollution information based on the user’s
-            location. <br>
-            The application will require map information based on the
-            user's location. <br>
-            The application will display an interactive map
-            that displays the relevant air pollution information. 
-            The application will advise users based on their age and height
-            information provided on whether the location is safe. <br>
-          </p>
-          <b>Non-Functional Requirements</b>
-          <p>
-            The application will colour code the map based on air pollution levels of the location. <br>
-            The application will store user data securely. <br>
-            The application will be compatible with the latest smartphones. <br>
-            The application will show the air pollution related to the users geolocation. <br>
-            The application will show the danger level related to the users geolocation. <br>
-            The application will have a simple and easy to use user interface. <br>
-            </p>
+            <i>insert content here</i>
         </div>
       </div>
     </div>
