--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <a href="weekly.html">Weekly Reports and Updates</a>
     <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
     <a href="requirements.html">Requirements</a>
+    <a href="designs.html">Designs and Concepts</a>
+    <a href="diagrams.html">Diagrams</a>
   </div>
   
   <div id="main">
