--- a/weekly.html
+++ b/weekly.html
@@ -32,14 +32,14 @@
     <!-- Sidebar Experiement -->
 
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="http://umamififty.github.io/pbl3">Home</a>
       <a href="reviews.html">Literature Reviews</a>
       <a href="weekly.html">Weekly Reports and Updates</a>
-      <a href="https://forms.gle/drBehXPPEEP2CXcW8" target="_blank">Survey!</a>
+      <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
       <a href="requirements.html">Requirements</a>
+      <a href="designs.html">Designs and Concepts</a>
+      <a href="diagrams.html">Diagrams</a>
     </div>
 
     <div id="main">
@@ -57,6 +57,12 @@
           <p>
             <i>insert content here</i>
           </p>
+
+          <b>July 4 2023:
+            <p>
+              <i>insert content here</i>
+            </p>
+          </b>
         </div>
       </div>
 
