--- a/reviews.html
+++ b/reviews.html
@@ -32,14 +32,14 @@
     <!-- Sidebar Experiement -->
 
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="http://umamififty.github.io/pbl3">Home</a>
       <a href="reviews.html">Literature Reviews</a>
       <a href="weekly.html">Weekly Reports and Updates</a>
       <a href="https://forms.gle/drBehXPPEEP2CXcW8">Survey!</a>
       <a href="requirements.html">Requirements</a>
+      <a href="designs.html">Designs and Concepts</a>
+      <a href="diagrams.html">Diagrams</a>
     </div>
 
     <div id="main">
