--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="requirements.html">Requirements</a>
     <a href="designs.html">Designs and Concepts</a>
     <a href="diagrams.html">Diagrams</a>
+    <a href="app.html">Application</a>
   </div>
   
   <div id="main">
