--- a/reviews.html
+++ b/reviews.html
@@ -40,6 +40,7 @@
       <a href="requirements.html">Requirements</a>
       <a href="designs.html">Designs and Concepts</a>
       <a href="diagrams.html">Diagrams</a>
+      <a href="app.html">Application</a>
     </div>
 
     <div id="main">
